--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Lunches</title>
-	</head>
 		<meta charset="utf-8">
 		<title>Programming Platform</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-		    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    		<script src="newsApp.js"></script>
-			<link rel="stylesheet" href="../style.css"> 
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    	<script src="newsApp.js"></script>
+		<link rel="stylesheet" href="/assets/css/style.css"> 
+	</head>
+
 	<body>
+		<div id="titleDiv">
 		<h1>Programming Platform</h1>
 		<h3>Need help while learning programming?</h3>
 		<h3>Check out these links !</h3>
+		</div>
+
 		{{{ body }}}
 	</body>
 </html>
