--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-
+<div id="mainArtiDiv">
    {{#each articles}}
    <div class="card text-center" id="articles">
   <div class="card-body">
@@ -16,5 +16,5 @@
 </div>
 <br />
     {{/each}}
-
+</div>
 
