--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,5 +18,7 @@
 		</div>
 
 		{{{ body }}}
+
+		<footer id="footer"><i class="fa fa-copyright" aria-hidden="true"></i>Copyright &copy Pushpinder (Kaur's World)</footer>
 	</body>
 </html>
