comment functionality changed

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,11 +7,11 @@
     <p>{{description}}</p>
     {{!-- <hr /> --}}
        <a href="https://www.freecodecamp.org{{link}}" class="btn btn-primary">Read More</a>
-       <div class="form-group">
+       {{!-- <div class="form-group">
          <h5><label for="comment">Comment:</label></h5>
          <textarea class="form-control" rows="3" id="comment"></textarea>
-      </div>
-      <button class="btn btn-primary">Submit</button> <button class="btn btn-primary" id="seeAll">See All Comments</button>
+      </div> --}}
+      {{!-- <button class="btn btn-primary">Submit</button> <button class="btn btn-primary" id="seeAll">See All Comments</button> --}}
   </div>
 </div>
 <br />
